--- a/src/interface/ui/plot_window.ui
+++ b/src/interface/ui/plot_window.ui
@@ -261,7 +261,7 @@
      <x>0</x>
      <y>0</y>
      <width>534</width>
-     <height>24</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuData_Sources">
@@ -277,8 +277,15 @@
     <addaction name="actionX_axis"/>
     <addaction name="actionY_axis"/>
    </widget>
+   <widget class="QMenu" name="menuSave">
+    <property name="title">
+     <string>Save</string>
+    </property>
+    <addaction name="actionSave_to_JPG"/>
+   </widget>
    <addaction name="menuData_Sources"/>
    <addaction name="menuView"/>
+   <addaction name="menuSave"/>
   </widget>
   <action name="actionLegend_Box">
    <property name="checkable">
@@ -305,6 +312,11 @@
    </property>
    <property name="text">
     <string>Y axis</string>
+   </property>
+  </action>
+  <action name="actionSave_to_JPG">
+   <property name="text">
+    <string>Save to JPG</string>
    </property>
   </action>
  </widget>
