--- a/src/interface/ui/image_window.ui
+++ b/src/interface/ui/image_window.ui
@@ -116,6 +116,24 @@
        </color>
       </brush>
      </colorrole>
+     <colorrole role="Text">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>127</red>
+        <green>127</green>
+        <blue>127</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="ButtonText">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>148</red>
+        <green>148</green>
+        <blue>148</blue>
+       </color>
+      </brush>
+     </colorrole>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
@@ -650,12 +668,42 @@
     </property>
     <addaction name="actionSaveToJPG"/>
    </widget>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
+    <addaction name="actionAuto_Zoom"/>
+    <addaction name="actionAuto_Levels"/>
+   </widget>
    <addaction name="menuData_Sources"/>
    <addaction name="menuSave"/>
+   <addaction name="menuOptions"/>
   </widget>
   <action name="actionSaveToJPG">
    <property name="text">
     <string>Save to JPG</string>
+   </property>
+  </action>
+  <action name="actionAuto_Zoom">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Auto Zoom</string>
+   </property>
+  </action>
+  <action name="actionAuto_Levels">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Auto Levels</string>
    </property>
   </action>
  </widget>
