--- a/src/interface/ui/line_plot_settings.ui
+++ b/src/interface/ui/line_plot_settings.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>303</width>
+    <width>308</width>
     <height>156</height>
    </rect>
   </property>
@@ -14,7 +14,34 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="1" colspan="2">
+   <item row="0" column="2">
+    <widget class="QCheckBox" name="x_auto">
+     <property name="text">
+      <string>Auto</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QCheckBox" name="y_auto">
+     <property name="text">
+      <string>Auto</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>X Axis:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="y_label"/>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="x_label"/>
+   </item>
+   <item row="5" column="1" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -31,30 +58,10 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
-    <widget class="QCheckBox" name="y_auto">
+   <item row="4" column="1">
+    <widget class="QCheckBox" name="histogram">
      <property name="text">
-      <string>Auto</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QLineEdit" name="x_label"/>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="y_label"/>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>X Axis:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="2">
-    <widget class="QCheckBox" name="x_auto">
-     <property name="text">
-      <string>Auto</string>
+      <string>Histogram Data</string>
      </property>
     </widget>
    </item>
